--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     />
     <link rel="stylesheet" href="/dist/css/index.css" />
   </head>
-  <body></body>
+  <body>
+    <button class="btn btn-success">Yay you did it!</button>
+    <button class="btn btn-warning">No</button>
+  </body>
 </html>
