Implemented basic text and image elements

--- a/profile/index.html
+++ b/profile/index.html
@@ -33,11 +33,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
-            </li>
+            </li>            <li class="nav-item">
+                <a class="nav-link" href="/feed/index.html">Feed</a>
+              </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
@@ -76,5 +80,59 @@
         </div>
       </div>
     </nav>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col-12"><h1>Username</h1></div>
+          <div class="col-md-6">
+            <img src="/images/example.jpg" class="img-fluid" alt="" />
+          </div>
+          <div class="col-4">
+            <p>X followers</p>
+            <p>X following</p>
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-bs-toggle="button"
+              autocomplete="off"
+            >
+              Follow
+            </button>
+          </div>
+        </div>
+        <ul class="list-group col-12 col-md-6 col-lg-4">
+          <li class="list-group-item">
+            <a href="#" class="list-group-item list-group-item-action"
+              ><img src="/images/example.jpg" alt="" class="img-fluid mb-2" />
+              <h3 class="h5">Example post 1</h3></a
+            >
+          </li>
+          <li class="list-group-item">
+            <a href="#" class="list-group-item list-group-item-action"
+              ><img src="/images/example.jpg" alt="" class="img-fluid mb-2" />
+              <h3 class="h5">Example post 2</h3></a
+            >
+          </li>
+          <li class="list-group-item">
+            <a href="#" class="list-group-item list-group-item-action"
+              ><img src="/images/example.jpg" alt="" class="img-fluid mb-2" />
+              <h3 class="h5">Example post 3</h3></a
+            >
+          </li>
+          <li class="list-group-item">
+            <a href="#" class="list-group-item list-group-item-action"
+              ><img src="/images/example.jpg" alt="" class="img-fluid mb-2" />
+              <h3 class="h5">Example post 4</h3></a
+            >
+          </li>
+          <li class="list-group-item">
+            <a href="#" class="list-group-item list-group-item-action"
+              ><img src="/images/example.jpg" alt="" class="img-fluid mb-2" />
+              <h3 class="h5">Example post 5</h3></a
+            >
+          </li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
