--- a/feed/index.html
+++ b/feed/index.html
@@ -33,10 +33,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="/profile/index.html">Profile</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -76,5 +76,67 @@
         </div>
       </div>
     </nav>
+    <main class="container">
+          <div class="row">
+            <div class="col md-6"><form action="/profile/index.html">
+                <div class="mb-3"><h1>Make a post</h1>
+                  <label for="exampleInputEmail1" class="form-label"
+                    >Title</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="exampleInputEmail1"
+                    aria-describedby="emailHelp"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label"
+                    >content</label
+                  >
+                  <input
+                    type="textarea"
+                    class="form-control"
+                    id="exampleInputPassword1"
+                    required
+                  />
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form></div>
+          </div>
+            <div class="row">
+                <div class="col-md-12"><h1>Feed</h1></div>
+                <div class="col-md-3">
+              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+            </div>
+            <div class="col-md-3">
+              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+            </div>
+            <div class="col-md-3">
+              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+            </div>
+            <div class="col-md-3">
+              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+            </div>
+            <div class="col-md-3">
+              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+            </div>
+            <div class="col-md-3">
+              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+            </div>
+            <div class="col-md-3">
+              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+            </div>
+            <div class="col-md-3">
+              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+            </div>
+            <div class="col-md-3">
+              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+            </div>
+            
+        </div>
+      </div>
+    </main>
   </body>
 </html>
