--- a/feed/index.html
+++ b/feed/index.html
@@ -3,22 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Feed</title>
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="/dist/css/index.css" />
-  </head>
-  <body>
-    <script
+    <link rel="stylesheet" href="/dist/css/index.css" />   
+       <script defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="/index.html">Brand Name</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,35 +32,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link" href="/index.html">Log In</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Feed</a>
+              </li>
             <li class="nav-item">
               <a class="nav-link" href="/profile/index.html">Profile</a>
             </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
           </ul>
+          <div class="col-12 col-md-4 col-lg-2 my-2 ">
+            <select class="form-select" aria-label="Sort posts">
+            <option selected>Sort by</option>
+            <option value="1">Newest</option>
+            <option value="2">Oldest</option>
+            <option value="3">Most popular</option>
+          </select>
+          </div>
           <form class="d-flex">
             <input
               class="form-control me-2"
@@ -76,67 +63,79 @@
         </div>
       </div>
     </nav>
-    <main class="container">
-          <div class="row">
-            <div class="col md-6"><form action="/profile/index.html">
-                <div class="mb-3"><h1>Make a post</h1>
-                  <label for="exampleInputEmail1" class="form-label"
-                    >Title</label
-                  >
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="exampleInputEmail1"
-                    aria-describedby="emailHelp"
-                    required
-                  />
+    
+    <main>
+    <div class="container pt-2 d-flex justify-content-center flex-column">
+            <div class="row gap-4 mt-4 pt-4">
+                <div class="col-12"><h1>Feed</h1>
                 </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label"
-                    >content</label
-                  >
-                  <input
-                    type="textarea"
-                    class="form-control"
-                    id="exampleInputPassword1"
-                    required
-                  />
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form></div>
-          </div>
+                    <div class="col-12 col-md-5 col-lg-3">
+                        <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                    </div>
+                    <div class="col-12 col-md-5 col-lg-3">
+                        <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                    </div>
+                        <div class="col-12 col-md-5 col-lg-3">
+                            <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                        </div>
+                    <div class="col-12 col-md-5 col-lg-3">
+                        <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                    </div>
+                    <div class="col-12 col-md-5 col-lg-3">
+                        <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                    </div>
+                    <div class="col-12 col-md-5 col-lg-3">
+                        <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                    </div>
+                    <div class="col-12 col-md-5 col-lg-3">
+                        <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                    </div>
+                    <div class="col-12 col-md-5 col-lg-3">
+                        <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                    </div>
+                    <div class="col-12 col-md-5 col-lg-3">
+                        <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                    </div>
+                    <div class="col-12 col-md-5 col-lg-3">
+                            <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                    </div>
+                    <div class="col-12 col-md-5 col-lg-3">
+                            <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                    </div>
+                    <div class="col-12 col-md-5 col-lg-3">
+                            <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                    </div>
+                    <div class="col-12 col-md-5 col-lg-3">
+                            <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                    </div>
+            </div>
             <div class="row">
-                <div class="col-md-12"><h1>Feed</h1></div>
-                <div class="col-md-3">
-              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
+                <div class="col-12 col-md-10 col-lg-9 my-4">
+                    <form>
+                          <h2>Make a new post</h2>
+                            <label for="validationTitle" class="form-label">Title</label>
+                            <input type="text" class="form-control" id="validationTitle" required>
+                          <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label">Content:</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
+                          </div>
+                          <div class="mb-3">
+                            <label for="formFile" class="form-label">Upload a photo:</label>
+                            <input class="form-control" type="file" id="formFile">
+                          </div>
+                        <div class="col-md-8">
+                            <button type="submit" class="btn btn-lg btn-primary">Post</button>
+                        </div>
+                      </form>
+                </div>
             </div>
-            <div class="col-md-3">
-              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
-            </div>
-            <div class="col-md-3">
-              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
-            </div>
-            <div class="col-md-3">
-              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
-            </div>
-            <div class="col-md-3">
-              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
-            </div>
-            <div class="col-md-3">
-              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
-            </div>
-            <div class="col-md-3">
-              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
-            </div>
-            <div class="col-md-3">
-              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
-            </div>
-            <div class="col-md-3">
-              <img src="/images/example.jpg" class="img-thumbnail" alt="..." />
-            </div>
-            
         </div>
       </div>
     </main>
-  </body>
+    <div class="container-fluid pt-4 mt-4">
+        <footer class="py-3 my-4 sticky-bottom border-top">
+          <p class="text-center text-muted pt-4">© 2023 Company</p>
+        </footer>
+      </div>
+</body>
 </html>
