--- a/feed/index.html
+++ b/feed/index.html
@@ -33,15 +33,16 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="/index.html">Log In</a>
+            </li>            
+            <li class="nav-item">
+              <a class="nav-link" href="/profile/index.html">Profile</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Feed</a>
               </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/profile/index.html">Profile</a>
-            </li>
+
           </ul>
-          <div class="col-12 col-md-4 col-lg-2 my-2 ">
+          <div class="col-12 col-md-4 col-lg-2 mb-2 ">
             <select class="form-select" aria-label="Sort posts">
             <option selected>Sort by</option>
             <option value="1">Newest</option>
@@ -49,6 +50,7 @@
             <option value="3">Most popular</option>
           </select>
           </div>
+          <div class="col-12 col-md-4 col-lg-2 mb-2 ">
           <form class="d-flex">
             <input
               class="form-control me-2"
@@ -59,7 +61,7 @@
             <button class="btn btn-outline-success" type="submit">
               Search
             </button>
-          </form>
+          </form></div>
         </div>
       </div>
     </nav>
