--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="/dist/css/index.css" />
-      <script defer
+    <script
+      defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
-    ></script></head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light pb-3 my-2">
+    ></script>
+  </head>
+  <body bg-lightgreen>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light pb-3 mb-2">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Brand Name</a>
         <button
@@ -37,10 +39,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/feed/index.html">Feed</a>
+              <a class="nav-link" href="/profile/index.html">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/profile/index.html">Profile</a>
+              <a class="nav-link" href="/feed/index.html">Feed</a>
             </li>
           </ul>
         </div>
