--- a/profile/index.html
+++ b/profile/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     ></script></head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light pb-3 my-2">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light pb-3 mb-2">
       <div class="container-fluid">
         <a class="navbar-brand" href="/index.html">Brand Name</a>
         <button
@@ -35,11 +35,11 @@
               <a class="nav-link" href="/index.html">Log In</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Profile</a>
+            </li>            
+            <li class="nav-item">
               <a class="nav-link" href="/feed/index.html">Feed</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Profile</a>
-              </li>
           </ul>
         </div>
       </div>
