--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body bg-lightgreen>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light pb-3 mb-2">
-      <div class="container-fluid">
+  <body class="bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary pb-3 mb-2 sticky-top">
+      <div class="container-fluid lead">
         <a class="navbar-brand" href="#">Brand Name</a>
         <button
           class="navbar-toggler"
@@ -84,9 +84,9 @@
         </div>
       </div>
     </main>
-    <div class="container">
-      <footer class="py-3 my-4 fixed-bottom border-top">
-        <p class="text-center text-muted pt-4">© 2023 Company</p>
+    <div class="container ">
+      <footer class="py-3 mt-4 fixed-bottom border-top">
+        <p class="text-center pt-4">© 2023 Company</p>
       </footer>
     </div>
   </body>
