--- a/profile/index.html
+++ b/profile/index.html
@@ -48,7 +48,7 @@
       <div class="container gap-4 d-flex align-items-start">
         <div class="row">
           <div class="col-12 col-md-8 col-lg-6 mb-4">
-            <div class="card" style="width: 30rem;">
+            <div class="card">
               <img
                 src="/images/example-5.jpg"
                 class="card-img-top"
