password min-length fix

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                 />
               </div>
               <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label"
+                <label for="password-input" class="form-label"
                   >Password</label
                 >
                 <input
                   type="password"
                   class="form-control"
                   id="password-input"
-                  min-length="8"
+                  minlength="8"
                   required 
                 />
               </div>
